# tic-tac-toe

./: .gitignore  Cargo.toml  README.md  bun.lockb  index.html  package.json  sass.d.ts  tsconfig.json  vite.config.ts
backend/: .gitignore
backend/src/: messages.rs  socket.rs  state.rs
frontend/: bun.lockb  package.json
frontend/src/: App.tsx  api.ts  index.scss  index.tsx
frontend/src/components/: game.module.scss  game.tsx  home.tsx  queue.tsx
src/: App.jsx  App.tsx  api.ts  cors.rs  index.scss  main.rs  main.tsx  messages.rs  socket.rs  state.rs
src/components/: Button.jsx  Square.scss
src/components/Game/: checkWinner.ts  game.module.scss  game.tsx
src/components/Loading/: Loading.module.scss  Loading.tsx
src/components/Menu/: Menu.module.scss  Menu.tsx
src/components/Winner/: Winner.module.scss  Winner.tsx
