[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.6.0"
actix-web-actors = "4.3.0"
futures-util = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
